--- a/src/routes/AccountPage.module.css
+++ b/src/routes/AccountPage.module.css
@@ -13,6 +13,7 @@
   object-fit: cover;
   object-position: Top;
   border-radius: 50%;
+  margin-top: 10px;
 }
 
 .name,
@@ -29,6 +30,15 @@
 .walletText,
 .wallet {
   color: #5d3891;
+}
+
+.walletText {
+  font-weight: 400;
+  margin-top: 40px;
+}
+
+.wallet {
+  font-size: 30px;
 }
 
 .divButtons {
