--- a/src/routes/FriendsPage.module.css
+++ b/src/routes/FriendsPage.module.css
@@ -5,11 +5,26 @@
   justify-items: center;
   align-items: center;
   align-content: center;
-  gap: 20px;
+  /* gap: 20px; */
 }
 
 .divHeader {
   margin-top: 30px;
+}
+
+.divMsg {
+  margin: 0px;
+  padding: 0px;
+  height: 20px;
+  margin-bottom: 10px;
+}
+
+.pMsg {
+  margin: 0px;
+  padding: 0px;
+  text-align: center;
+  text-justify: center;
+  color: rgb(25, 176, 25);
 }
 
 .hrLine {
@@ -30,11 +45,10 @@
 .inputFriends {
   font-size: 18px;
   width: 90%;
-  margin: 10px;
+  margin: 0px;
   height: 40px;
   border-radius: 15px;
   border: 2px solid rgb(192, 192, 192);
-  margin-top: 0px;
   padding-left: 15px;
 }
 
@@ -60,6 +74,7 @@
   justify-items: center;
   align-items: center;
   align-content: center;
+  margin: 0px;
 }
 
 .buttonAdd {
