--- a/src/components/Notification.module.css
+++ b/src/components/Notification.module.css
@@ -66,3 +66,13 @@
   font-size: 20px;
   margin-bottom: 20px;
 }
+
+.belanja {
+  color: #5d3891;
+  font-weight: 700;
+}
+
+.amount {
+  font-weight: 500;
+  color: red;
+}
