earns coins after paying feature

--- a/src/components/Payee.module.css
+++ b/src/components/Payee.module.css
@@ -26,6 +26,7 @@
   text-align: center;
   background-color: rgb(224, 224, 224);
   border: none;
+  margin: 0px;
   /* text-decoration: underline; */
 }
 
