--- a/src/routes/Bill.module.css
+++ b/src/routes/Bill.module.css
@@ -63,7 +63,7 @@
 
 .divPayeeList {
   width: 100%;
-  height: 480px;
+  height: 450px;
   /* background-color: blue; */
   margin-top: 10px;
   display: flex;
@@ -173,4 +173,17 @@
   border-radius: 5px;
   color: rgb(44, 44, 44);
   border: 1px solid rgb(148, 148, 148);
+}
+
+.coins {
+  margin: 0px;
+  font-style: italic;
+  font-weight: 700;
+  color: #533281;
+}
+
+.coinsStrikeOut {
+  font-weight: 400;
+
+  text-decoration: line-through;
 }
