--- a/src/routes/HomePage.module.css
+++ b/src/routes/HomePage.module.css
@@ -18,6 +18,13 @@
   margin-top: 10px;
 }
 
+.divWallet {
+  display: flex;
+  flex-direction: column;
+  margin: 0px;
+  padding: 0px;
+}
+
 .h2,
 .h3 {
   color: rgb(237, 237, 237);
@@ -40,6 +47,7 @@
   font-size: 35px;
   margin-right: 20px;
   margin-top: 50px;
+  margin-bottom: 0px;
 }
 
 .button {
@@ -87,4 +95,12 @@
   object-fit: cover;
   object-position: Top;
   margin-top: 30px;
+}
+
+.coins {
+  padding: 0px;
+  margin: 0px;
+  color: white;
+  font-weight: 400;
+  margin-bottom: 10px;
 }
