--- a/src/routes/Bill.module.css
+++ b/src/routes/Bill.module.css
@@ -10,6 +10,7 @@
   color: white;
   width: 100%;
   margin-top: 0px;
+  margin-bottom: 0px;
   font-weight: 100;
 }
 
@@ -37,8 +38,25 @@
   text-align: left;
 }
 
+.message {
+  background-color: rgb(255, 82, 82);
+  color: white;
+  width: 100%;
+  margin-top: 0px;
+  height: 25px;
+}
+
+.messageInactive {
+  background-color: rgb(255, 82, 82);
+  color: white;
+  width: 100%;
+  margin-top: 0px;
+  height: 25px;
+  opacity: 0%;
+}
+
 .h2BillName {
-  margin-top: 20px;
+  margin-top: 0px;
   text-transform: capitalize;
   margin-bottom: 0px;
 }
@@ -53,6 +71,7 @@
   opacity: 90%;
   height: 40px;
   margin-top: 0px;
+  margin-bottom: 20px;
 }
 
 .select {
@@ -77,7 +96,7 @@
 
 .divPayeeList {
   width: 100%;
-  height: 400px;
+  height: 380px;
   /* background-color: blue; */
   margin-top: 10px;
   display: flex;
@@ -121,6 +140,10 @@
 }
 .buttonSubmit:hover {
   background-color: #7548b6;
+}
+
+.buttonSubmit:disabled {
+  background-color: #7e7e7e;
 }
 
 .divOptions {
