--- a/src/routes/HomePage.module.css
+++ b/src/routes/HomePage.module.css
@@ -1,3 +1,12 @@
+.divWhole {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  justify-items: center;
+  align-items: center;
+  align-content: center;
+}
+
 .divMain {
   display: flex;
   flex-direction: row;
@@ -6,6 +15,7 @@
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
   justify-content: space-between;
+  width: 100%;
   /* box-shadow: 1px 1px 10px 1px rgb(169, 169, 169); */
 }
 
@@ -30,6 +40,10 @@
   color: rgb(237, 237, 237);
   text-align: left;
   margin-left: 20px;
+}
+.h2Merchants {
+  margin-bottom: 0px;
+  margin-top: 15px;
 }
 
 .h2 {
@@ -103,4 +117,80 @@
   color: white;
   font-weight: 400;
   margin-bottom: 10px;
+}
+
+.divPromo {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-content: center;
+  align-items: center;
+  width: 400px;
+  height: 150px;
+  margin-top: 30px;
+  box-shadow: 0px 0px 5px 1px rgb(204, 204, 204);
+  border-radius: 20px;
+}
+
+.divPromoText {
+  display: flex;
+  flex-direction: column;
+}
+
+.logo {
+  width: 120px;
+  height: 120px;
+}
+
+.span {
+  font-weight: 500;
+  font-size: 10px;
+  border: 1px solid rgb(192, 192, 192);
+  border-radius: 20px;
+  padding-left: 4px;
+  padding-right: 4px;
+  color: rgb(101, 101, 101);
+}
+
+.promoText,
+.launch,
+.belanja {
+  margin: 0px;
+  padding: 0px;
+  text-align: left;
+  margin-left: 20px;
+}
+
+.launch {
+  margin-bottom: 15px;
+  font-weight: 600;
+  font-size: 13px;
+}
+
+.promoText {
+  font-size: 17px;
+}
+
+.belanja {
+  font-size: 30px;
+  font-weight: 750;
+  color: #5d3891;
+}
+
+.link {
+  text-decoration: none;
+  /* width: 100%; */
+  color: black;
+  align-self: center;
+}
+
+.divMerchantList {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 430px;
+  height: 400px;
+  /* background-color: aqua; */
+  padding: 0px;
 }
