--- a/src/routes/Bill.module.css
+++ b/src/routes/Bill.module.css
@@ -8,13 +8,14 @@
 .divHeader {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-around;
   justify-items: center;
   align-items: center;
   align-content: center;
   background-color: #533281;
   width: 100%;
   padding-top: 5px;
+  gap: 80px;
   /* padding-bottom: 05px; */
 }
 
@@ -30,13 +31,30 @@
   opacity: 70%;
 }
 
+.btnRemove {
+  background-color: transparent;
+  border: transparent;
+  font-size: 20px;
+  margin-bottom: 3px;
+  margin-right: 5px;
+  border-radius: 10px;
+  width: 40px;
+  height: 40px;
+  padding: 0px;
+  /* padding-right: 1px; */
+}
+
+.btnRemove:hover {
+  background-color: rgb(186, 43, 43);
+}
+
 .header {
   background-color: #533281;
   color: white;
-  width: 100%;
-  margin-top: 0px;
+  /* width: 100%; */
+  margin-top: 5px;
   font-weight: 100;
-  padding-right: 45px;
+  /* padding-right: 45px; */
 }
 
 .settlement {
