--- a/src/routes/BillsPage.module.css
+++ b/src/routes/BillsPage.module.css
@@ -12,6 +12,32 @@
   overflow-y: auto;
 }
 
+.divBillAdd {
+  display: flex;
+  justify-content: space-around;
+  justify-items: center;
+  align-items: center;
+  align-content: center;
+}
+
+.buttonAdd {
+  border: transparent;
+  /* box-shadow: 0px 0px 5px 1px rgb(203, 203, 203); */
+  font-size: 20px;
+  width: 40px;
+  height: 40px;
+  padding: 0px;
+  margin: 0px;
+  border-radius: 50%;
+  margin-bottom: 12px;
+  margin-left: 50px;
+  background-color: transparent;
+}
+
+.buttonAdd:hover {
+  background-color: rgb(237, 237, 237);
+}
+
 .divHeader {
   margin-top: 30px;
 }
@@ -28,6 +54,7 @@
 .h2Bills {
   margin-bottom: 20px;
   color: #5d3891;
+  margin-left: 160px;
 }
 
 .link {
